# Tucil1_13524130

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: allqueendirec.cpp  inputfile.cpp  main_program.cpp  outputarr.cpp  wx_ui.cpp
src/include/: allqueendirec.hpp  inputfile.hpp  outputarr.hpp  queenframe.hpp  shape.hpp
test/: input.txt  input2.txt  input3.txt  input4.txt
